Revision history for Config::Abstraction - Merge and manage configuration data from different sources

0.35
	Bunp some minimum versions - GitHub#6

0.34	Fri Sep  5 08:37:21 EDT 2025
	Added bin/config-dump
	If schema is passed in, validate the config file against it

0.33	Thu Jul 17 08:19:41 EDT 2025
	The config_path value wasn't being stashed properly

0.32	Wed Jun 18 14:47:07 EDT 2025
	Bash doesn't allow colons in variable names, so use _ everywhere

0.31	Tue Jun 17 14:52:57 EDT 2025
	Fix GitHub#4

0.30	Thu Jun  5 15:30:25 EDT 2025
	Try harder to ensure the running script isn't loaded as its own configuration
	Test argv and note that argv now need to start with --

0.29	Mon May 26 20:55:38 EDT 2025
	Also look in ${script_name}.cfg, ${script_name}.conf and ${script_name}.config
	Allow new() to accept just one parameter - the name of a file

0.28	Sat May 24 09:00:10 EDT 2025
	Look in the current directory, unless given an absolute path

0.27	Fri May 23 17:04:52 EDT 2025
	Look in generic DOCUMENT_ROOT/../conf before site specific DOCUMENT_ROOT/conf
	Added the level argument to new()
	Look in the current directory

0.26	Fri May 16 21:10:49 EDT 2025
	Change location of bug reports to RT
	Bumped minimum version of XML::PP (GitHub#1 - ANDK)
	Turn off clone behavior

0.25	Thu May 15 07:57:07 EDT 2025
	Added the 'merge' option
	Improved the documentation of the merge_defaults routine

0.24	Mon May 12 16:15:09 EDT 2025
	Added the 'no_fixate' option

0.23	Mon May 12 12:01:49 EDT 2025
	Fix tests on machines that have configuration files installed elsewhere
	Look in more places for the config files, when config_dirs is not given
	Consider $script_name for configuration data as well
	'file' means 'config_file'

0.22	Fri May  9 14:31:28 EDT 2025
	Fix CI tests

0.21	Fri May  9 13:55:23 EDT 2025
	Handle YAML crashes on reading an INI file

0.20	Tue May  6 20:07:40 EDT 2025
	Added merge_defaults()

0.19	Tue May  6 13:48:46 EDT 2025